--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,99 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# ===================================
+# Dependencies
+# ===================================
 /node_modules
 /.pnp
-.pnp.js
+.pnp.*
 
-# testing
+# ===================================
+# Testing
+# ===================================
 /coverage
+*.test.js.snap
+.nyc_output
 
-# next.js
+# ===================================
+# Next.js
+# ===================================
 /.next/
 /out/
 
-# production
+# ===================================
+# Production
+# ===================================
 /build
 
-# misc
+# ===================================
+# Misc
+# ===================================
 .DS_Store
 *.pem
 
-# debug
+# ===================================
+# Debug
+# ===================================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
+# ===================================
+# Environment Files
+# ===================================
 .env
+.env.*
+!.env.example
+!.env.template
 
-# vercel
+# ===================================
+# Vercel
+# ===================================
 .vercel
 
-# typescript
+# ===================================
+# TypeScript
+# ===================================
 *.tsbuildinfo
 next-env.d.ts
+
+# ===================================
+# IDEs and Editors
+# ===================================
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea/
+*.swp
+*.swo
+*~
+*.bak
+# *.backup  # Temporarily allowing middleware.ts.backup for reference
+*.Backup.*
+*.tmp
+
+# ===================================
+# OS
+# ===================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# ===================================
+# Cursor
+# ===================================
+.cursor/
+
+# ===================================
+# Logs
+# ===================================
+*.log
+logs/
