--- a/fleet-management-app/package.json
+++ b/fleet-management-app/package.json
@@ -43,6 +43,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "next": "^16.0.4",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "^8.10.1",
