Refactor: Update .gitignore files to exclude .env.example and remove ENV_SETUP_INSTRUCTIONS.txt, while adjusting Keycloak setup instructions and README for clarity on environment variable configuration.

--- a/fleet-management-app/.gitignore
+++ b/fleet-management-app/.gitignore
@@ -47,11 +47,12 @@ yarn-error.log*
 # ===================================
 # Environment Files
 # ===================================
+
 # Env files (can opt-in for committing if needed)
-.env
-.env.*
-!.env.example
-!.env.template
+# .env
+# .env.*
+# !.env.example
+# !.env.template
 
 # ===================================
 # Vercel
