--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ yarn-error.log*
 # ===================================
 .env
 .env.*
-!.env.example
+# !.env.example
 !.env.template
 
 # ===================================
